--- a/gallery/styles.css
+++ b/gallery/styles.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap'); 
 
+:root{
+  --color-white: #fff;
+  --color-bg: #f6f6f9;
+  --color-primary: #313131;
+  --color-light: rgba(132, 139, 200, 0.5);
+
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+.dark-theme{
+  --color-white: #202528;
+  --color-bg: #181a1e;
+  --color-primary: #fff;
+  --color-light: rgba(0, 0, 0, .4);
+
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -7,16 +25,73 @@
 }
 
 body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
   font-family: 'Muli', sans-serif;
   overflow: hidden;
   font-size: 24px;
-  color: white;
-  background-color: #111;
+  color: var(--color-primary);
+  background-color: var(--color-bg);
+  user-select: none;
+}
+
+main{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
+main .top{
+  display: flex;
+  align-items: center;
+  gap: 1.8rem;
+}
+
+main .theme{
+  display: flex;
+  justify-content: space-between;
+  border-radius: 1.2rem;
+  width: 4.8rem;
+  height: 1.6rem;
+  background-color: var(--color-light);
+  cursor: pointer;
+}
+
+main .theme span{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  font-size: 1.2rem;
+}
+
+main .theme span.active{
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  border-radius: 1rem;
+}
+
+main .top .search{
+  position: relative;
+}
+
+main .top .search span{
+  position: absolute;
+  right: 1rem;
+  bottom: .4rem;
+  font-size: 1.2rem;
+}
+
+main .top input{
+  padding: .2rem .9rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.1rem;
+  border-bottom: 2px solid var(--color-primary);
+  color: var(--color-primary);
 }
 
 .container{
@@ -28,7 +103,7 @@ body{
 .container .slide{
   position: relative;
   flex: 1;
-  height: 80vh;
+  height: 85vh;
   margin: 0.625rem;
   border-radius: 1.25rem;
   background-size: cover;
@@ -36,12 +111,14 @@ body{
   background-position: center;
   cursor: pointer;
   transition: all .5s ease-in-out;
+  box-shadow: var(--box-shadow);
 }
 
-.slide h3{
+.title{
   position: absolute;
   left: 1.25rem;
   bottom: 1.25rem;
+  color: #fff;
   opacity: 0;
 }
 
@@ -49,7 +126,7 @@ body{
   flex: 10;
 }
 
-.slide.active h3{
+.title.active{
   opacity: 1;
   transition: opacity .3s ease-in .4s;
 }
