--- a/gallery/styles.css
+++ b/gallery/styles.css
@@ -111,6 +111,7 @@ main .top input{
   background-position: center;
   cursor: pointer;
   transition: all .5s ease-in-out;
+  filter: grayscale(1) brightness(40%);
   box-shadow: var(--box-shadow);
 }
 
@@ -124,6 +125,7 @@ main .top input{
 
 .slide.active{
   flex: 10;
+  filter: none;
 }
 
 .title.active{
